resources/assets/css/optional.css
/* ... */
.bim__video_wrapper{
	width: 100vw;
	height: 480px;
	background-color: #3A3A3A;
	display: flex;
	justify-content: center;
}
.bim__video{
	pointer-events: none;
}
.param__modeling_img{
	float: left;
	margin-right: 2%;
}
.param__modeling_h{
	text-align: center;
	margin: 20px 0;
}
.maps-wrapper{
	display: flex;
	justify-content: space-between;
	filter: grayscale(93%);
}
.map{
	width: 49.5%;
}
.software__wrapper{
	width: 100%;
	display: flex;
	justify-content: space-between;
}
.software{
	width: 40%;
}
.software__h{
	margin: 10px 0;
	font-weight: bold;
	font-size: 16px;
}
.software p{
	font-size: 14px;
	line-height: 2em;
	padding-left: 1em;
}
.software__container{
	width: 100%;
	margin: 10px 0;
}
.tech__stripe{
	width: 100%;
	margin: 30px 0;
	text-align: center;
}
.tech__stripe img{
	width: 100%;
}
#guarantees h3{
	color: #fff;
}
#guarantees h4{
	height: 80px;
}
.portfolio__slide_container{
	height: 480px;
	width: 100%;
}
.portfolio__slide_wrapper{
	width: 100%;
	height: 100%;
	display: flex;
	flex-wrap: wrap;
	justify-content: space-around;
	align-content: space-between; 
	position: relative;
}
.portfolio__item{
	width: 24%;
	height: 49%;
	background-size: cover;

	background-repeat: no-repeat;
	background-position: center center;
}
.portfolio__item_lg{
	width: 49%;
}
.portfolio__item_inner{
	width: 100%;
	height: 100%;
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	align-content: space-around; 
}
.portfolio__item_inner *{
	display: none;
}
.portfolio__item_inner:hover{
	background-color: rgba(0, 0, 0, 0.6);
	background-blend-mode: overlay;
	transition: 1s;
}
.portfolio__item_inner:hover *{
	display: block;
	transition: 0.5s
}
.slick-prev{
	height: 100%;
	width: 30px;
	top: 0;
	left: -30px;
	border-top-left-radius: 10px;
	border-bottom-left-radius: 10px;
	position: absolute;
	font-family: monospace;
	font-size: 44px;
	color: #fff;
	display: flex;
	justify-content: center;
	align-items: center;
	background-color: rgba(0, 0, 0, 0.2);
	cursor: pointer;
}
.slick-next{
	height: 100%;
	width: 30px;
	top: 0;
	right: -30px;
	border-top-right-radius: 10px;
	border-bottom-right-radius: 10px;
	position: absolute;
	font-family: monospace;
	font-size: 44px;
	color: #fff;
	display: flex;
	justify-content: center;
	align-items: center;
	background-color: rgba(0, 0, 0, 0.2);
	cursor: pointer;
}
.slick-next:hover, .slick-prev:hover{
	background-color: rgba(0, 0, 0, 0.8);
	transition: 1s;
}
.modal__slick-prev{
	height: auto;
	width: 30px;
	top: 48%;
	left: 1%;
	position: absolute;
	font-family: monospace;
	font-size: 44px;
	color: #fff;
	opacity: 0.8;
	cursor: pointer;
	z-index: 1
}
.modal__slick-next{
	height: auto;
	width: 30px;
	top: 48%;
	right: 1%;
	position: absolute;
	font-family: monospace;
	font-size: 44px;
	color: #fff;
	opacity: 0.8;
	cursor: pointer;
}
.modal__slick-next:hover, .modal__slick-prev:hover{
	opacity: 1;
	transition: 1s;
}
.modal__page_close{
	z-index: 2;
    font-size: 16px;
    position: absolute;
    top: 9%;
    right: 7%;
    color: #fff;
}
.modal__page_close:hover{
	text-decoration: none;
}
.modal__slick_item img{
	width: 100%;
}
.modal__slick_text{
	background-color: #000;
	color: #fff;
	padding: 10px;
}
.portfolio__mobile{
	display: none;
}
.pre-service__block{
	cursor: pointer;
}
#bid_form .service-choice__button{
	max-width: 310px;
	margin: auto;
}
#bid_form .service-choice-wrapper{
	max-width: 310px;
	margin: auto;
	height: 200px;
}
#bid_form .service-choice{
	height: 20%;
}
#software{
	position: relative;
	padding-top: 3rem;
}
.blumberg{
	position: absolute;
	bottom: 0;
	right: 0;
	font-size: 10px;
	color: #454545;
}
.blumberg a{
	color: #454545;
}
.blumberg a:hover{
	text-decoration: none;
}
.word-switcher__wrapper{
	height: 1.5em;
	position: relative;
	overflow-y: hidden;
}
.word-switcher{
	list-style: none;
	position: relative;
	top: 0;
	animation: turnWord 18s infinite linear;
	color: #fbce0b;
	padding: 0;
}
@media (min-width: 1901px){
	.bim__video_wrapper{
		height: 700px;
	}
}
@media (min-width: 1500px and max-width: 1900px){
	.bim__video_wrapper{
		height: 600px;
	}
}
@media (max-width: 1366px){
	.modal__slick_item img{
		height: 425px;
	}
	.top_contacts{
		flex-direction: column;
	}
	.contact-top{
		margin-left: 0;
		margin-top: 10px;
	}
}
@media (max-width: 1200px){
	.modal_page_content{
		max-height: 60%
	}
	.modal__page_close{
		top: 19%;
	}
	.worker__tech-list{
		padding-left: 3%;
	}
	.bim__video{
		width: 70%;
	}
	.team{
		flex-direction: column;
	}
	.team_foto{
		width: 100%;
		height: 600px;
		margin-bottom: 10px;
	}
	.worker-description__wrapper{
		width: 100%;
	}
	.worker__1{
	    top: 32%;
	    left: 5%;
	}
	.worker__2{
	    top: 21%;
	    left: 18%;
	}
	.worker__3{
	    top: 15%;
	    left: 26%;
	}
	.worker__4{
	    top: 10%;
	    left: 34%;
	}
	.worker__5{
	    top: 9%;
	    left: 64%;
	}
	.worker__6{
	    top: 13%;
	    left: 70%;
	}
	.worker__7{
	    top: 19%;
	    left: 76%;
	}
	.worker__8{
	    top: 28%;
	    left: 93%;
	}
	.worker__9{
	    top: 6%;
	    left: 73%;
	}
}
@media (max-width: 991px){
	#bid_form .service-choice__button{
		max-width: 384px;
	}
	#bid_form .service-choice-wrapper{
		max-width: 384px;
	}
	.slick-next, .slick-prev{
		height: 100%;
	}
	.modal_page_content{
		max-height: 90%
	}
	.modal__slick_item img{
		height: 350px;
	}
	.modal__page_close{
		top: 4%;
		right: 6%;
	}
	.team_foto{
		height: 490px;
	}
	.info-name__wrap{
		flex-wrap: wrap;
		justify-content: center;
	}
	.info-name li{
		margin: 5px;
	}
	.bim__video{
		width: 86%;
	}
	.service-description-wrapper{
		flex-direction: column;
	}
	.service__avatar{
		width: 100%;
		height: 200px;
	}
	.service__content{
		width: 100%;
	}
	.service{
		width: 49%;
	}
}
/* ... */

